objects/MI__c.object
<CustomObject>
    <description>This Custom Object is for any field that need to be in SF for reporting</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Zar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <label>Applicant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Name__c</fullName>
        <label>Beneficiary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Behaviour__c</fullName>
        <label>Client Behaviour</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <label>Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Date__c</fullName>
        <label>Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Step__c</fullName>
        <label>Current Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instruction_Processed_Days__c</fullName>
        <label>Instruction Processed Days</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previously_Assigned__c</fullName>
        <label>Previously Assigned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ITC JHB</fullName>
                </value>
                <value>
                    <fullName>ITC PE</fullName>
                </value>
                <value>
                    <fullName>ITC CPT</fullName>
                </value>
                <value>
                    <fullName>ITC PTA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <label>SBU</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SLA_Timeline__c</fullName>
        <label>SLA Timeline</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TAT met</fullName>
                </value>
                <value>
                    <fullName>TAT not met</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_in_Current_Step__c</fullName>
        <label>Time in Current Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZAR_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>MI</label>
    <nameField>
        <label>DQC Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>